# MCIA-TEaMS

./: .gitignore  README.md
MCIA/: CMakeLists.txt  CMakePresets.json  MCIA.sln
MCIA/MCIA/: Answer.cpp  Answer.h  AuthService.cpp  AuthService.h  CMakeLists.txt  CodedException.cpp  CodedException.h  DBPage.cpp  DBPage.h  DBValidation.cpp  DBValidation.h  DBtest.db  DatabaseManagement.cpp  DatabaseManagement.h  Filter.h  Genre.cpp  Genre.h  MCIA.vcxproj  MCIA.vcxproj.filters  Movie.cpp  Movie.h  MovieGenre.cpp  MovieIntermediary.cpp  MovieIntermediary.h  OperationStatus.cpp  OperationStatus.h  OperationStatusToMessage.cpp  OperationStatusToMessage.h  PagedSelection.cpp  PagedSelection.h  Question.cpp  Question.h  Source.cpp  User.cpp  User.h  UserAnswerQuestion.cpp  UserAnswerQuestion.h  Validation.cpp  Validation.h  ValidationCode.cpp  (+8 more)
MCIA/MCIA/Utils/: NamedAsciiChars.h
MCIA/MCIA/include/: AuthService.h  CodedException.h  ConnectedUser.h  ConsoleInputController.h  DBPage.h  DBValidation.h  DatabaseManagement.h  Movie.h  MovieGenre.h  MovieInformationDisplayer.h  MovieIntermediary.h  MovieService.h  NamedAsciiChars.h  OperationStatus.h  OperationStatusToMessage.h  PyObjectWrapper.h  RecomSystem.h  User.h  UserRecomService.h  WatchedMovie.h  WatchedMovieDisplayer.h  WishList.h  WishListDisplayer.h  WishlistedMovie.h  WishlistedMovieDisplayer.h
MCIA/MCIA/resources/: Questions.txt
MCIA/MCIA/src/: Answer.cpp  AuthService.cpp  CodedException.cpp  ConnectedUser.cpp  ConsoleInputController.cpp  DBPage.cpp  DBValidation.cpp  DatabaseManagement.cpp  Genre.cpp  Movie.cpp  MovieGenre.cpp  MovieInformationDisplayer.cpp  MovieIntermediary.cpp  MovieService.cpp  OperationStatus.cpp  OperationStatusToMessage.cpp  PyObjectWrapper.cpp  Question.cpp  RecomSystem.cpp  User.cpp  UserAnswerQuestion.cpp  UserRecomService.cpp  WatchedMovie.cpp  WatchedMovieDisplayer.cpp  WishList.cpp  WishListDisplayer.cpp  WishlistedMovie.cpp  WishlistedMovieDisplayer.cpp
MCIA/QT/: .gitignore  CMakeLists.txt  homewindow.cpp  homewindow.h  homewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  profilewindow.cpp  profilewindow.h  profilewindow.ui  stylesheet.qss
MCIA/UnitTests/: CMakeLists.txt  Source.cpp
MCIA/UnitTests/tests/: AnswerTests.cpp  CodedExceptionTests.cpp  ConsoleInputControllerTests.cpp  DBPageTests.cpp  DBValidationTests.cpp  GenreTests.cpp  MovieGenreTests.cpp  MovieInformationDisplayerTests.cpp  MovieIntermediaryTests.cpp  MovieTests.cpp  OperationStatusTests.cpp  OperationStatusToMessageTests.cpp  UserTests.cpp  WatchedMovieDisplayerTests.cpp  WatchedMovieTests.cpp  WishListDisplayerTests.cpp  WishListTests.cpp  WishlistedMovieDisplayerTests.cpp  WishlistedMovieTests.cpp
MCIA/Validation/: Validation.vcxproj  Validation.vcxproj.filters  Validator.cpp  Validator.h
MCIA/Validator/: CMakeLists.txt
MCIA/Validator/include/: Validator.h
MCIA/Validator/src/: Validator.cpp
MCIA/build-QT-Desktop_Qt_6_4_1_MSVC2019_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
MCIA/build-QT-Desktop_Qt_6_4_1_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-6d7ae7c6e5de6922d0f8.json  cmakeFiles-v1-3072621dcc5d877e1d9c.json  codemodel-v2-ab830c4a80285e27e02c.json  index-2022-12-17T10-36-02-0514.json  target-QT-Debug-d5b25c3f4f78616c2758.json  target-QT_autogen-Debug-c1ee05f1a8e4fa2b66c1.json  target-QT_autogen_timestamp_deps-Debug-e77a607eef76290338c6.json
MCIA/build-QT-Desktop_Qt_6_4_1_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
MCIA/build-QT-Desktop_Qt_6_4_1_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
RecomSystem/: NeuralNetwork.py  NeuralNetwork_Vtibi.py  RecomSys.ipynb  RecomSys.py  RecomSysKDTreeImpl.py  RecomSysPy.py  RecomSystemOnlyNN.ipynb  RecomSystemRatingBased.py  RecomSystemRatingBased_recom.py  RecomSystemRatingBased_retrain.py  RecomSystemRatingBased_update.py  cppcompatible_environment.yml  data_import.py  dummy.py  environment.yml  retrain.bat
RecomSystem/MovieRecommQT/: CMakeLists.txt
RecomSystem/build-MovieRecommQT-Desktop_Qt_6_4_1_MSVC2019_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
RecomSystem/build-MovieRecommQT-Desktop_Qt_6_4_1_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-b5c78f6938a582c7b761.json  cmakeFiles-v1-ea906f63de3ff14048c6.json  codemodel-v2-17d490b85ab875d1cce1.json  directory-.-Debug-f3e9834e5e564e47fe28.json  index-2022-12-17T10-32-13-0895.json  target-MovieRecommQT-Debug-898663bdbf951953f2b7.json  target-MovieRecommQT_autogen-Debug-0140029799fde7205f0e.json  target-MovieRecommQT_autogen_timestamp_deps-Debug-f999737949caab2f1302.json
RecomSystem/build-MovieRecommQT-Desktop_Qt_6_4_1_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
RecomSystem/build-MovieRecommQT-Desktop_Qt_6_4_1_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
RecomSystem/saved_model/first_train/: keras_metadata.pb  saved_model.pb
RecomSystem/saved_model/first_train/variables/: variables.index
RecomSystem/saved_model/first_train1/: saved_model.pb
RecomSystem/saved_model/first_train1/variables/: variables.index
RecomSystem/saved_model/movie_model/: keras_metadata.pb  saved_model.pb
RecomSystem/saved_model/movie_model/variables/: variables.index
RecomSystem/saved_model/train600/: keras_metadata.pb  saved_model.pb
RecomSystem/saved_model/train600/variables/: variables.index
RecomSystem/saved_model/use_model/: keras_metadata.pb  saved_model.pb
RecomSystem/saved_model/use_model/variables/: variables.data-00000-of-00001  variables.index
